--- a/Pages/ModelBinding.cshtml
+++ b/Pages/ModelBinding.cshtml
@@ -15,6 +15,24 @@
     <input asp-for="Password" type="password" class="form-control">
     <span asp-validation-for="Password" class="text-danger"></span>
   </div>
+  <div class="form-check">
+    <input asp-for="LoginRole" class="form-check-input" type="radio" value="1" checked>
+    <label class="form-check-label">Member</label>
+  </div>
+  <div class="form-check">
+    <input asp-for="LoginRole" class="form-check-input" type="radio" value="2">
+    <label class="form-check-label">Moderator</label>
+  </div>
+  <div class="form-check">
+    <input asp-for="LoginRole" class="form-check-input" type="radio" value="3">
+    <label class="form-check-label">Admin</label>
+  </div>
+  <span asp-validation-for="LoginRole" class="text-danger"></span>
+  <hr class="my-4">
+  <div class="form-check">
+    <input asp-for="RememberMe" class="form-check-input" type="checkbox">
+    <label class="form-check-label">Remember Me?</label>
+  </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 @if (Model.Username != string.Empty)
